2009-07-28  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/frames.jl: make doc-windows unframed [Timo Korvola]

	* lisp/sawfish/wm/windows.jl: set window-type to dock for panels [Timo Korvola]

	* configure.in: small fixup in x11r7 checks regarding SMlib and libICE

2009-07-27  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/viewport.jl: Added viewport-boundary-mode dynamic [Jeremy Hankins]

	* lisp/sawfish/wm/viewport.jl
	* lisp/sawfish/wm/ext/match-window.jl: added new-viewport window matcher and viewport-windows function [Jeremy Hankins]

2009-07-26  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/tab.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl
	* lisp/sawfish/wm/util/marks.jl: fixed license header

	* lisp/sawfish/wm/gnome-integration.jl: don't remove quit and restart entries from menu
	                                        use gnome-www-browser instead of ancient gnome-moz-remote
						display applications in the apps-menu (currently uncategorized)
					        remove Applnk from application search paths
						removed some yet obsolete code

2009-07-25  Christopher Bratusek <zanghar@freenet.de>
	* src/Makefile.in: include $CFLAGS in gtk-style rule

	* configure.in: ... non-bash compatibility

	* lisp/sawfish/wm/mmc/window-manipulation.jl: 3 new functions based on sawfish-mmc code (maximize-reframe, maximize-unframe, rename-window)

	* sawfish.ebuild.in: improved

	* sawfish.spec.in: fixed repexecdir definition

	* po/Makefile.in: renamed realclean rule to distclean rule

2009-07-24  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/frames.jl: support theme-tarballs compressed with XZ and LZMA (needs librep 0.90.1)

	* configure.in: require librep 0.90.1

	* lisp/sawfish/wm/ext/infinite-desktop.jl: fixed cursor warping [Jeremy Hankins]

	* lisp/sawfish/wm/defaults.jl: update GNOME-Check for recent versions [Alexey I. Froloff]

	* lisp/sawfish/wm/placement/stagger.jl: fix group of stagger option
