@@ -1,3 +1,7 @@
+2009-07-29  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/mmc/window-manipulation.jl: moved maximize-unframe/reframe into sawfish.wm.state.maximize
+	                                              moved rename-window into sawfish.wm.windows 
+
 2009-07-28  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/frames.jl: make doc-windows unframed [Timo Korvola]
 
